# voxia

./: .gitignore  CHANGELOG.md  LICENSE  README.md  commitlint.config.mjs  components.json  index.html  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.cursor/rules/: tauri--cursor-rules.mdc
.github/: release-please-config.json
.github/workflows/: ci.yml  commitlint.yml  release-please.yml  release.yml  tag-release.yml
scripts/: ci-install-linux-deps.sh  ci-prepare-ffmpeg.sh  prepare-ffmpeg-sidecar.sh  tauri.sh  verify-versions.sh
spec/: plan.md
specs/: 00-overview.md  01-data-model.md  02-context7-notes.md  03-theming.md
src/: App.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: asr.rs  audio.rs  commands.rs  events.rs  export.rs  lib.rs  main.rs  models.rs  project.rs  state.rs
src-tauri/src/translate/: azure.rs  deepseek.rs  errors.rs  google.rs  google_free.rs  mod.rs  nllb.rs
src/components/: app-page-header.tsx  back-to-library-link.tsx  developer-tools-panel.tsx  mode-toggle.tsx  notification-init.tsx  theme-sync.tsx
src/components/ui/: button.tsx  dialog.tsx  progress.tsx  sidebar.tsx  slider.tsx  tabs.tsx  textarea.tsx
src/features/editor/: caption-color-fields.tsx  (+18 more)
src/layouts/: app-shell-layout.tsx
src/lib/: caption-colors.ts  commands.ts  events.ts  format-bytes.ts  format-invoke-error.ts  format-mutation-error.ts  media-paths.ts  model-download-progress.ts  notifications.ts  project-display-name.ts  timecode.ts  updater.ts
src/pages/: editor-page.tsx  library-page.tsx  settings-page.tsx
src/store/: useEditorStore.ts  usePlayerStore.ts  useSettingsStore.ts  useTranslationStore.ts
src/types/: voxia.ts
(+12 files in other folders)
