[package]
name = "voxia"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "voxia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["whisper"]
whisper = ["dep:whisper-rs"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2"
log = "0.4"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "native-tls"] }
futures-util = "0.3"
bytes = "1"
hex = "0.4"
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
whisper-rs = { version = "0.16", optional = true, default-features = false }
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", optional = true, default-features = false, features = ["metal"] }
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
